<resources>

    <!-- App -->
    <string name="app_name">Movie Application</string>

    <!-- App Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_ratings">Ratings</string>
    <string name="menu_exit">Exit</string>

    <!-- Settings -->
    <string name="settings_day_night_mode">Day/Night Mode</string>
    <string name="settings_day_night_button_text">Swap</string>

    <string name="clear_search_button_text">Clear Search History</string>
    <string name="clear_favorites_button_text">Clear Favorites</string>
    <string name="clear_ratings_button_text">Clear Ratings</string>

    <!-- Search Field -->
    <string name="search_main_text">Movie, Series &amp; Game Browser</string>
    <string name="search_hint_text">Enter a movie name</string>
    <string name="search_button_text">Search</string>
    <string name="favorites_button_text">Favorites</string>

    <!-- Search Result -->

    <!-- Title -->
    <string name="title_favorite_description">Fav</string>
    <string name="title_rating_description">Rat</string>

    <!-- Poster -->
    <string name="poster_description">Poster</string>

    <!-- Ratings -->
    <string name="rating_none">–</string>
    <string name="rating_one">1</string>
    <string name="rating_two">2</string>
    <string name="rating_three">3</string>
    <string name="rating_four">4</string>
    <string name="rating_five">5</string>
    <string name="rating_six">6</string>
    <string name="rating_seven">7</string>
    <string name="rating_eight">8</string>
    <string name="rating_nine">9</string>
    <string name="rating_ten">10</string>

</resources>